--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -2,5 +2,6 @@
 {% block  content %}
  <form method="POST" action="">
             {% csrf_token %}
+           {{form.as_p}}
 </form>
 {% endblock  %}
