--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -3,5 +3,7 @@
  <form method="POST" action="">
             {% csrf_token %}
            {{form.as_p}}
+           <input type="submit" value="Submit">
 </form>
+
 {% endblock  %}
