able to create new assignment

--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -25,7 +25,7 @@
   <div class="card user_card" style="width: 25rem; height: 10rem">
     <div class="card-body card_body_contain">
       <h4>Assignments Tracker for {{user.get_username}}</h4>
-      <a href="/add_workout/">
+      <a href="/add_assignment/">
         <button class="btn btn-primary mt-1">Add Assignment</button>
       </a>
     </div>
