--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -58,7 +58,7 @@
           <td>{{assignment.date_filed}}</td>
           <td>
             <button class="update_button">
-              <a href="">Update</a>
+              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
             </button>
           </td>
         </tr>
@@ -74,7 +74,7 @@
           <td>{{assignment.date_filed}}</td>
           <td>
             <button class="update_button">
-              <a href="">Update</a>
+              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
             </button>
           </td>
         </tr>
