views & urls for assignent tracker completed

--- a/templates/assignment_detail.html
+++ b/templates/assignment_detail.html
@@ -50,19 +50,19 @@
     
   <div class="button_container">
     <button class="btn btn-light">
-      <a href="/new_workout/{{assignment.id}}/">Lesson</a>
+      <a href="/lesson_assignment/{{assignment.id}}/">Lesson</a>
     </button>
     <button class="btn btn-light">
-      <a href="/in_progress_workout/{{assignment.id}}/">Activity</a>
+      <a href="/activity_assignment/{{assignment.id}}/">Activity</a>
     </button>
     <button class="btn btn-light">
-      <a href="/done_workout/{{assignment.id}}/">Quiz</a>
+      <a href="/quiz_assignment/{{assignment.id}}/">Quiz</a>
     </button>
     <button class="btn btn-light">
-      <a href="/invalid_workout/{{assignment.id}}/">Assessment</a>
+      <a href="/assessment_assignment/{{assignment.id}}/">Assessment</a>
     </button>
      <button class="btn btn-light">
-      <a href="/invalid_workout/{{assignment.id}}/">Completed</a>
+      <a href="/completed_assignment/{{assignment.id}}/">Completed</a>
     </button>
     <button class="btn btn-light">
       <a href="/journal/">Return to Journal</a>
