--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -90,7 +90,7 @@
           <td>{{assignment.date_filed}}</td>
           <td>
             <button class="update_button">
-              <a href="">Update</a>
+              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
             </button>
           </td>
         </tr>
@@ -106,7 +106,7 @@
           <td>{{assignment.date_filed}}</td>
           <td>
             <button class="update_button">
-              <a href="">Update</a>
+              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
             </button>
           </td>
         </tr>
@@ -122,7 +122,7 @@
           <td>{{assignment.date_filed}}</td>
           <td>
             <button class="update_button">
-              <a href="">Update</a>
+              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
             </button>
           </td>
         </tr>
@@ -138,7 +138,7 @@
           <td>{{assignment.date_filed}}</td>
           <td>
             <button class="update_button">
-              <a href="">Update</a>
+              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
             </button>
           </td>
         </tr>
