extended width of profile header

--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -22,9 +22,10 @@
   <body>  
 
 
-  <div class="card user_card" style="width: 25rem; height: 10rem">
+  <div class="card user_card" style="width: 75rem; height: 10rem">
     <div class="card-body card_body_contain">
-      <h4>Assignments Tracker for {{user.get_username}}</h4>
+      <h3>Profile Section</h3>
+      <h4>Username: {{user.get_username}}</h4>
       <a href="/add_assignment/">
         <button class="btn btn-primary mt-1">Add Assignment</button>
       </a>
