--- a/templates/assignment_detail.html
+++ b/templates/assignment_detail.html
@@ -1,5 +1,3 @@
-{% comment %} {% load static %} {% endcomment %}
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,18 +5,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
-
-    {% comment %} <link rel="stylesheet" href="{% static 'workout_detail.css' %}" /> {% endcomment %}
+    <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.2/dist/paper.min.css">
 
     <title>Assignment</title>
   </head>
+  <style>
+    a {
+      text-decoration: none !important;
+    }
+  </style>
   <body>
     
   <div class="tables_container">
