--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -1,4 +1,4 @@
-{% comment %} {% load static %} {% endcomment %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,15 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
-
-    {% comment %} <link rel="stylesheet" href="{% static 'tracker.css' %}" /> {% endcomment %}
+     <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.2/dist/paper.min.css">
 
     <title>Journal</title>
   </head>
