--- a/templates/assignment_detail.html
+++ b/templates/assignment_detail.html
@@ -7,13 +7,16 @@
 
     <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.2/dist/paper.min.css">
 
-    <title>Assignment</title>
+    <title>Assignment Detail</title>
   </head>
+
   <style>
-    a {
+    a:link, a:visited {
       text-decoration: none !important;
+      color: blue;
     }
   </style>
+
   <body>
     
   <div class="tables_container">
@@ -34,7 +37,7 @@
           <td>{{assignment.assignment_type}}</td>
           <td>{{assignment.date_filed}}</td>
         <td>
-          <button class='btn btn-danger'>
+          <button class='btn btn-info'>
             <a href='/remove_assignment/{{assignment.id}}'>Delete</a>
           </button>
         </td>
