got rid of blue underline for buttons

--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -50,9 +50,7 @@
           <td>{{assignment.assignment_type}}</td>
           <td>{{assignment.date_filed}}</td>
           <td>
-            <button class="update_button">
-              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
-            </button>
+            <a href="/assignment_detail/{{assignment.id}}/" class="paper-btn btn-danger-outline">Update</a>
           </td>
         </tr>
         {%endif%} 
@@ -66,9 +64,7 @@
           <td>{{assignment.assignment_type}}</td>
           <td>{{assignment.date_filed}}</td>
           <td>
-            <button class="update_button">
-              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
-            </button>
+              <a href="/assignment_detail/{{assignment.id}}/" class="paper-btn btn-info-outline">Update</a>
           </td>
         </tr>
         {%endif%} 
@@ -82,9 +78,7 @@
           <td>{{assignment.assignment_type}}</td>
           <td>{{assignment.date_filed}}</td>
           <td>
-            <button class="update_button">
-              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
-            </button>
+            <a href="/assignment_detail/{{assignment.id}}/" class="paper-btn btn-info-outline">Update</a>
           </td>
         </tr>
         {%endif%} 
@@ -98,9 +92,7 @@
           <td>{{assignment.assignment_type}}</td>
           <td>{{assignment.date_filed}}</td>
           <td>
-            <button class="update_button">
-              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
-            </button>
+            <a href="/assignment_detail/{{assignment.id}}/" class="paper-btn btn-info-outline">Update</a>
           </td>
         </tr>
         {%endif%} 
@@ -114,9 +106,7 @@
           <td>{{assignment.assignment_type}}</td>
           <td>{{assignment.date_filed}}</td>
           <td>
-            <button class="update_button">
-              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
-            </button>
+            <a href="/assignment_detail/{{assignment.id}}/" class="paper-btn btn-info-outline">Update</a>
           </td>
         </tr>
         {%endif%} 
@@ -130,9 +120,7 @@
           <td>{{assignment.assignment_type}}</td>
           <td>{{assignment.date_filed}}</td>
           <td>
-            <button class="update_button">
-              <a href="/assignment_detail/{{assignment.id}}/">Update</a>
-            </button>
+            <a href="/assignment_detail/{{assignment.id}}/" class="paper-btn btn-info-outline">Update</a>
           </td>
         </tr>
         {%endif%} 
