--- a/templates/assignment_detail.html
+++ b/templates/assignment_detail.html
@@ -10,13 +10,6 @@
     <title>Assignment Detail</title>
   </head>
 
-  <style>
-    a:link, a:visited {
-      text-decoration: none !important;
-      color: blue;
-    }
-  </style>
-
   <body>
     
   <div class="tables_container">
@@ -37,9 +30,7 @@
           <td>{{assignment.assignment_type}}</td>
           <td>{{assignment.date_filed}}</td>
         <td>
-          <button class='btn btn-info'>
-            <a href='/remove_assignment/{{assignment.id}}'>Delete</a>
-          </button>
+            <a href='/remove_assignment/{{assignment.id}}' class="paper-btn btn-info-outline">Delete</a>
         </td>
       </tr>
     </tbody>
@@ -47,24 +38,12 @@
   </div>
     
   <div class="button_container">
-    <button class="btn btn-light">
-      <a href="/lesson_assignment/{{assignment.id}}/">Lesson</a>
-    </button>
-    <button class="btn btn-light">
-      <a href="/activity_assignment/{{assignment.id}}/">Activity</a>
-    </button>
-    <button class="btn btn-light">
-      <a href="/quiz_assignment/{{assignment.id}}/">Quiz</a>
-    </button>
-    <button class="btn btn-light">
-      <a href="/assessment_assignment/{{assignment.id}}/">Assessment</a>
-    </button>
-     <button class="btn btn-light">
-      <a href="/completed_assignment/{{assignment.id}}/">Completed</a>
-    </button>
-    <button class="btn btn-light">
-      <a href="/journal/">Return to Journal</a>
-    </button>
+      <a href="/lesson_assignment/{{assignment.id}}/" class="paper-btn btn-info-outline">Lesson</a>
+      <a href="/activity_assignment/{{assignment.id}}/" class="paper-btn btn-info-outline">Activity</a>
+      <a href="/quiz_assignment/{{assignment.id}}/" class="paper-btn btn-info-outline">Quiz</a>
+      <a href="/assessment_assignment/{{assignment.id}}/" class="paper-btn btn-info-outline">Assessment</a>
+      <a href="/completed_assignment/{{assignment.id}}/" class="paper-btn btn-info-outline">Completed</a>
+      <a href="/journal/" class="paper-btn btn-info-outline">Return to Journal</a>
   </div>  
 
    
