--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% block  content %}
- <form method="POST" action="">
+ {% comment %} <form method="POST" action="">
             {% csrf_token %}
+</form> {% endcomment %}
+<form method="post">
+  {% csrf_token %} {{ form.as_p }}
+  <input type="submit" value="Login" />
 </form>
+
 {% endblock  %}
