added link to home on forms and some changes to home

--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -3,6 +3,7 @@
  {% comment %} <form method="POST" action="">
             {% csrf_token %}
 </form> {% endcomment %}
+<a href="/">Home</a>
 <form method="post">
   {% csrf_token %} {{ form.as_p }}
   <input type="submit" value="Login" />
