able to delete assignment

--- a/templates/assignment_detail.html
+++ b/templates/assignment_detail.html
@@ -43,7 +43,7 @@
           <td>{{assignment.assignment_type}}</td>
           <td>{{assignment.date_filed}}</td>
         <td>
-            <a href='/remove_assignment/{{assignment.id}}' class="paper-btn btn-info-outline">Delete</a>
+            <a href='/delete_assignment/{{assignment.id}}' class="paper-btn btn-info-outline">Delete</a>
         </td>
       </tr>
     </tbody>
