--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -43,7 +43,7 @@
         <div class="card user_card" style="width: 35rem; height: 5rem">
             <div class="card-body card_body_contain">
               {% comment %} <h3>Profile Section</h3> {% endcomment %}
-              <h4>{{user.first_name}} {{user.last_name}}'s Assignments</h4>
+              <h4>{{user.username}}'s Assignments</h4>
                 <a href="/add_assignment/" class="paper-btn btn-secondary">Add Assignment</a>
             </div>
           </div>
@@ -68,7 +68,7 @@
                   <td>{{assignment.assignment_type}}</td>
                   <td>{{assignment.date_filed}}</td>
                   <td>
-                    <a href="/assignment_detail/{{assignment.id}}/" class="paper-btn btn-danger-outline">Update</a>
+                    <a href="/assignment_detail/{{assignment.id}}/" class="paper-btn btn-info-outline">Update</a>
                   </td>
                 </tr>
                 {%endif%} 
@@ -151,7 +151,7 @@
         <!--Reflection-->
          <div class="card user_card" style="width: 30rem; height: 5rem">
             <div class="card-body card_body_contain">
-              <h4>{{user.first_name}} {{user.last_name}}'s Reflection</h4>
+              <h4>{{user.username}}'s Reflection</h4>
               <a href="/add_assignment/" class="paper-btn btn-secondary">Add Reflection</a>
             </div>
           </div>
