--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,14 +14,17 @@
 
   <div class="card user_card" style="width: 75rem; height: 10rem">
     <div class="card-body card_body_contain">
-      <h3>Profile Section</h3>
-      <h4>Username: {{user.get_username}}</h4>
+      <button><a href="/">Home</a></button>
+       <h3>Profile Section</h3>
+       <h4>Username: {{user.get_username}}</h4>
       <a href="/add_assignment/">
         <button class="btn btn-primary mt-1">Add Assignment</button>
       </a>
     </div>
   </div>
 
+  <br>
+  <br>
   <br>
   <br>
   <br>
