--- a/templates/forms/generic_form.html
+++ b/templates/forms/generic_form.html
@@ -10,7 +10,7 @@
     <title>Form</title>
   </head>
   <body>
-
+  <button><a href="/">Home</a></button>
       <div class="container">
         <div class="row form_box">
           <form method="post">
