--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -21,6 +21,7 @@
     }
     .card_body_contain {
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
     }
     .reflection_container {
@@ -33,6 +34,9 @@
       text-align: center;
       width: 200px;
     }
+    .collapsible {
+      width: 30rem;
+    }
   </style>
 
   <body>  
@@ -40,14 +44,62 @@
   <div class="">
     <div class="row">
       <div class='col'>
-        <div class="card user_card" style="width: 35rem; height: 5rem">
+        <div class="card user_card" style="width: 30rem; height: 15rem">
             <div class="card-body card_body_contain">
               {% comment %} <h3>Profile Section</h3> {% endcomment %}
               <h4>{{user.username}}'s Assignments</h4>
                 <a href="/add_assignment/" class="paper-btn btn-secondary">Add Assignment</a>
+                <a href="/add_assignment/" class="paper-btn btn-secondary">Add Reflection</a>
             </div>
           </div>
           <br>
+
+            <div class="collapsible">
+            <input id="collapsible1" type="checkbox" name="collapsible">
+            <label for="collapsible1">Morning Reflection</label>
+            <div class="collapsible-body">
+                  <div class="reflection_container">
+                <div class="card" style="width: 30rem;">
+                    {% comment %} <div class="card-header">Morning Reflection</div> {% endcomment %}
+                      <div class="card-body">
+                        <h4 class="card-title">Wake up earlier</h4>
+                        <h5 class="card-subtitle">Dated Field</h5>
+                        <p class="card-text">I noticed I have a lot of assessments coming up. For this, it is best to wake up an hour earlier than I usually do for the next few weeks so I can make sure I do not fall behind</p>
+                        <div class=reflection_buttons>
+                          <a href="" class="paper-btn btn-secondary">Update</a>
+                          <a href="" class="paper-btn btn-danger">Delete</a>
+                        </div>
+                      </div>
+                  {% comment %} </div> {% endcomment %}
+              </div>
+            </div>
+          </div>
+
+          <div class="collapsible">
+            <input id="collapsible2" type="checkbox" name="collapsible">
+            <label for="collapsible2">Evening Reflection</label>
+            <div class="collapsible-body">
+                  <div class="reflection_container">
+                <div class="card" style="width: 30rem;">
+                    {% comment %} <div class="card-header">Morning Reflection</div> {% endcomment %}
+                      <div class="card-body">
+                        <h4 class="card-title">Sleep earlier</h4>
+                        <h5 class="card-subtitle">Dated Field</h5>
+                        <p class="card-text">I noticed I have a lot of assessments coming up. For this, it is best to wake up an hour earlier than I usually do for the next few weeks so I can make sure I do not fall behind</p>
+                        <div class=reflection_buttons>
+                          <a href="" class="paper-btn btn-secondary">Update</a>
+                          <a href="" class="paper-btn btn-danger">Delete</a>
+                        </div>
+                      </div>
+                  {% comment %} </div> {% endcomment %}
+              </div>
+            </div>
+          </div>
+   
+      </div>
+      <div class='col'>
+
+
           <div class="tables_container">
             <table class="table table-striped table-info">
               <thead class="thead-info">
@@ -146,91 +198,10 @@
               </tbody>
             </table>
           </div><!--Table Container-->
-      </div>
-      <div class='col'>
-        <!--Reflection-->
-         <div class="card user_card" style="width: 30rem; height: 5rem">
-            <div class="card-body card_body_contain">
-              <h4>{{user.username}}'s Reflection</h4>
-              <a href="/add_assignment/" class="paper-btn btn-secondary">Add Reflection</a>
-            </div>
-          </div>
-
-          <div class="reflection_container">
-            <div class="card" style="width: 30rem;">
-                <div class="card-header">Morning Reflection</div>
-                  <div class="card-body">
-                    <h4 class="card-title">Wake up earlier</h4>
-                    <h5 class="card-subtitle">Dated Field</h5>
-                    <p class="card-text">I noticed I have a lot of assessments coming up. For this, it is best to wake up an hour earlier than I usually do for the next few weeks so I can make sure I do not fall behind</p>
-                    <div class=reflection_buttons>
-                      <a href="" class="paper-btn btn-secondary">Update</a>
-                      <a href="" class="paper-btn btn-danger">Delete</a>
-                    </div>
-                  </div>
-              </div>
-          </div>
-
-            <div class="reflection_container">
-            <div class="card" style="width: 30rem;">
-                <div class="card-header">Morning Reflection</div>
-                  <div class="card-body">
-                    <h4 class="card-title">Wake up earlier</h4>
-                    <h5 class="card-subtitle">Dated Field</h5>
-                    <p class="card-text">I noticed I have a lot of assessments coming up. For this, it is best to wake up an hour earlier than I usually do for the next few weeks so I can make sure I do not fall behind</p>
-                    <div class=reflection_buttons>
-                      <a href="" class="paper-btn btn-secondary">Update</a>
-                      <a href="" class="paper-btn btn-danger">Delete</a>
-                    </div>
-                  </div>
-              </div>
-          </div>
-
-            <div class="reflection_container">
-            <div class="card" style="width: 30rem;">
-                <div class="card-header">Morning Reflection</div>
-                  <div class="card-body">
-                    <h4 class="card-title">Wake up earlier</h4>
-                    <h5 class="card-subtitle">Dated Field</h5>
-                    <p class="card-text">I noticed I have a lot of assessments coming up. For this, it is best to wake up an hour earlier than I usually do for the next few weeks so I can make sure I do not fall behind</p>
-                    <div class=reflection_buttons>
-                      <a href="" class="paper-btn btn-secondary">Update</a>
-                      <a href="" class="paper-btn btn-danger">Delete</a>
-                    </div>
-                  </div>
-              </div>
-          </div>
 
 
-            <div class="reflection_container">
-            <div class="card" style="width: 30rem;">
-                <div class="card-header">Morning Reflection</div>
-                  <div class="card-body">
-                    <h4 class="card-title">Wake up earlier</h4>
-                    <h5 class="card-subtitle">Dated Field</h5>
-                    <p class="card-text">I noticed I have a lot of assessments coming up. For this, it is best to wake up an hour earlier than I usually do for the next few weeks so I can make sure I do not fall behind</p>
-                    <div class=reflection_buttons>
-                      <a href="" class="paper-btn btn-secondary">Update</a>
-                      <a href="" class="paper-btn btn-danger">Delete</a>
-                    </div>
-                  </div>
-              </div>
-          </div>
 
-            <div class="reflection_container">
-            <div class="card" style="width: 30rem;">
-                <div class="card-header">Morning Reflection</div>
-                  <div class="card-body">
-                    <h4 class="card-title">Wake up earlier</h4>
-                    <h5 class="card-subtitle">Dated Field</h5>
-                    <p class="card-text">I noticed I have a lot of assessments coming up. For this, it is best to wake up an hour earlier than I usually do for the next few weeks so I can make sure I do not fall behind</p>
-                    <div class=reflection_buttons>
-                      <a href="" class="paper-btn btn-secondary">Update</a>
-                      <a href="" class="paper-btn btn-danger">Delete</a>
-                    </div>
-                  </div>
-              </div>
-          </div>
+        
 
       </div>
     </div>
