fixed size of journal page

--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -12,7 +12,7 @@
 
   <style>
     .tables_container {
-      width: 45vw;
+      width: 50vw;
     }
     .container {
       border: 1px solid black;
@@ -36,8 +36,11 @@
     .row {
       display: flex;
     }
-    .col {
-      width: 50%;
+    .first_col {
+      width: 45%;
+    }
+    .second_col {
+      width: 55%;
     }
     .profile_buttons {
       display: flex;
@@ -62,7 +65,7 @@
 
   <div class="">
     <div class="row">
-      <div class="col">
+      <div class="col first_col">
 
     
           <div class="card user_card" style="width: 30em; height: 15rem">
@@ -114,7 +117,7 @@
         
         </div><!--col-->
 
-      <div class="col">
+      <div class="col second_col ">
          <div class="tables_container">
             <table class="table table-striped table-info">
               <thead class="thead-info">
