made size of button bigger

--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -59,6 +59,10 @@
       text-align: center;
       width: 150px;
     }
+    td a {
+      text-align: center;
+      width: 125px;
+    }
   </style>
 
   <body>  
