--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'authentication/custom.css' %}" />
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -34,8 +36,8 @@
   </style>
 
   <body>  
-
   <div class="">
+<button><a href="/">Home</a></button>
     <div class="row">
       <div class='col'>
         <div class="card user_card" style="width: 35rem; height: 5rem">
