--- a/templates/assignment_detail.html
+++ b/templates/assignment_detail.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'authentication/custom.css' %}" />
 <!DOCTYPE html>
 <html lang="en">
   <head>
