--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'authentication/custom.css' %}" />
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -28,16 +30,8 @@
 {% block  content %} {% endcomment %}
  {% comment %} <form method="POST" action="">
             {% csrf_token %}
-<<<<<<< HEAD
 </form> {% endcomment %}
 
 {% comment %} {% endblock  %} {% endcomment %}
 
 
-=======
-           {{form.as_p}}
-           <input type="submit" value="Submit">
-</form>
-
-{% endblock  %}
->>>>>>> 2ac35f40c27d5c3ca773cafc27a01526ed9fbfec
