--- a/templates/forms/generic_form.html
+++ b/templates/forms/generic_form.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'authentication/custom.css' %}" />
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,6 +13,7 @@
   </head>
   <body>
   <button><a href="/">Home</a></button>
+  <button type="button"><a href="{% url 'journal' %}">Your Journal</a></button>
       <div class="container">
         <div class="row form_box">
           <form method="post">
