--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -14,7 +14,9 @@
   <br/>
   <body>
 <div class="container"> 
-  <button><a href="/">Home</a></button>
+  <div class="navbar_box">
+    <a href="/" class="paper-btn btn-info">Home</a>
+  </div>
   <form method="post">
     {% csrf_token %} {{ form.as_p }}
     <button><input type="submit" value="Submit" /></button>
@@ -24,14 +26,5 @@
 </html>
 
 
-
-
-{% comment %} {% extends 'base.html' %}
-{% block  content %} {% endcomment %}
- {% comment %} <form method="POST" action="">
-            {% csrf_token %}
-</form> {% endcomment %}
-
-{% comment %} {% endblock  %} {% endcomment %}
 
 
