--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -94,7 +94,7 @@
           </div>
           <br>
 
-          {% for post in reflection_posts %}
+          {% for post in reflection %}
           <div class="collapsible">
             <input id=collapsible{{post.id}} type="checkbox" name="collapsible">
             <label for=collapsible{{post.id}}>{{post.title}}</label>
