worked on reflections with tim added footer to discord channel

--- a/templates/journal_profile.html
+++ b/templates/journal_profile.html
@@ -236,4 +236,8 @@
 
 
   </body>
+
+  <footer>
+    <a href="https://discord.gg/RG9FQEuY" class="paper-btn btn-secondary">Join our Discord Channel!</a>
+  </footer>
 </html>
