replaced image on homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -48,7 +48,7 @@
   </div>
   <div class="sm-4 col journal_image">
   <img
-   src="{% static 'authentication/journal.jpg' %}"
+   src="{% static 'authentication/journal3.jpeg' %}"
    alt="BJM Logo" />
   </div>
 </div>
