--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
 <div class="navbar_box">
   {% if user.is_authenticated %} {% csrf_token %}
    <a href="{% url 'journal' %}" class="paper-btn btn-info">Your Journal</a>
-   <a href="" class="paper-btn btn-info">Blog</a>
+   <a href="{% url 'blog' %}" class="paper-btn btn-info">Blog</a>
    <a href="{% url 'logout' %}" class="paper-btn btn-info">Logout</a>
 </div>
 
@@ -30,7 +30,7 @@
 <div class="navbar_box">
  <a href="{% url 'register' %}" class="paper-btn btn-info"> New User: Register Here!</a>
  <a href="{% url 'login' %}" class="paper-btn btn-info">Login</a>
- <a href="" class="paper-btn btn-info">Check out Blogs</a>
+ <a href="{% url 'blog' %}" class="paper-btn btn-info">Check out Blogs</a>
 </div>
 
   <h2> Life, At Your Own Pace 📓 </h2>
