--- a/templates/blog/results.html
+++ b/templates/blog/results.html
@@ -21,6 +21,6 @@
         {% endfor %}
     </div>
     {% else %}
-        <h2>No Results for {{keywords}}</h2>
+        <h2>No Tags for {{keywords}}</h2>
     {% endif %}
 {% endblock  %}
