--- a/templates/forms/form.html
+++ b/templates/forms/form.html
@@ -17,11 +17,38 @@
   <div class="navbar_box">
     <a href="/" class="paper-btn btn-info">Home</a>
   </div>
+  {% if messages %}
+    {% for message in messages %}
+         <div id="message" class="container">
+         <input class="alert-state" id="alert-5" type="checkbox">
+      <div class="alert alert-danger dismissible text-center" role="alert">
+        <strong>
+          {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+            Error: {{ message }}
+          {% else %}
+            {{ message.tags|title }}
+          {% endif %}
+        </strong>
+        
+        <label class="btn-close" for="alert-5">X</label>
+      </div>
+    </div>
+    {% endfor %}
+{% endif %}
   <form method="post">
     {% csrf_token %} {{ form.as_p }}
     <button><input type="submit" value="Submit" /></button>
   </form>
 </div>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+<script>
+  setTimeout(function() {
+  $('#message').fadeOut('slow');
+}, 3000);
+</script>
 </body>
 </html>
 
