--- a/templates/blog/article.html
+++ b/templates/blog/article.html
@@ -1,18 +1,60 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<div class="container-fluid">
-    <article class="article">
-        <h1 class="article-title"><a href="">Article Title</a></h1>
-        <p class="article-meta">Written by <a href="#">Super User</a></p>
-        <p class="text-lead"> Lorem... </p>
-        <p>Lorem...</p>
-
-        <div class="row">
-            <button>Read More</button>
-            <button>5 Comments</button>
-        </div>
-    </article>
+<style>
+  #panel, #flip {
+  padding: 5px;
+  text-align: center;
+ 
+}
+  #flip{
+    cursor: pointer;
+  }
+  #panel {
+  padding: 50px;
+  display: none;
+}
+</style>
+<div class="container-fluid margin-left-medium"> 
+  <div class="navbar_box">
+    <a href="/" class="paper-btn btn-info">Home</a>
+    {% if user.is_authenticated %}<a href="{% url 'blog' %}" class="paper-btn btn-info">Back to Blog</a>{% endif %}
+  </div>
 </div>
 
+<div class="container">
+    <article class="article">
+        <h1 class="article-title">{{results.title}}</h1>
+        <p class="article-meta">Written by {{results.author}} {{results.list_date| timesince}} ago</a></p>
+        <p>{{results.body}}</p>
+        {% if post.author.id  != request.user.id %}
+        <a href="/comment/{{results.id}}/">Make a Comment</a>
+        {% endif %}
+        <a id="flip"> {{comments.count}} Comments</a>
+  <div class="container-fluid my-container" id="panel">
+     <div class="row">
+       {% for post in comments %}
+           <div class="card margin-small display-card">
+                <div class="card-body">
+                    <h4 class="card-title">{{ post.title}}</h4>
+                    <h5 class="card-subtitle">Created by {{ post.author }} {{post.created_date| timesince}} ago</h5>
+                    <p class="card-text">{{post.context}}</p>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+  </div>
+
+    </article>
+</div>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+<script>
+  $(document).ready(function(){
+  $("#flip").click(function(){
+    $("#panel").slideToggle("slow");
+  });
+});
+</script>
 {% endblock  %}
